--- a/tasks/backend.yml
+++ b/tasks/backend.yml
@@ -1,4 +1,24 @@
 ---
+- name: Fetch backend git repository
+  ansible.builtin.git:
+    repo: 'https://tphan-personal@dev.azure.com/tphan-personal/neutron-game/_git/neutron-game'
+    dest: "{{ ansible_env.HOME }}/neutron-game"
+  environment:
+    GIT_TERMINAL_PROMPT: 0
+
+- name: Install node dependencies
+  become: true
+  shell: |
+    . {{ ansible_env.HOME }}/.nvm/nvm.sh
+    nvm use --silent {{ node_version }}
+    npm config set user 0
+    npm config set insafe-perm true
+    npm ci
+  args:
+    chdir: "{{ ansible_env.HOME }}/neutron-game"
+    executable: /bin/bash
+  register: node_ci_output
+
 - name: Setting up permission
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/neutron-game/mvnw"
@@ -6,12 +26,20 @@
     group: root
     mode: 0770
 
-- name: Verify
-  shell: >
-    {{ ansible_env.HOME }}/neutron-game/mvnw clean verify -Pprod
-  args:
-    executable: /bin/bash
-    chdir: "{{ ansible_env.HOME }}/neutron-game"
+#- name: Verify
+#  shell: >
+#    {{ ansible_env.HOME }}/neutron-game/mvnw clean verify -Pprod
+#  args:
+#    executable: /bin/bash
+#    chdir: "{{ ansible_env.HOME }}/neutron-game"
+
+- name: Copy JAR artifact
+  ansible.builtin.copy:
+    src: /home/ubuntu/ansible-neutron/artifacts/neutron.jar 
+    dest: /root/neutron.jar
+    owner: root
+    group: root
+    mode: '0755'
   
 - name: copy service file
   ansible.builtin.copy:  
@@ -35,8 +63,8 @@
     group: root
     mode: u+rwx,g+rx,o+rx
 
-#- name: Start neutronbe service
-#  service:
-#    state: started
-#    daemon-reload: yes
-#    name: neutronbe 
+- name: Start neutronbe service
+  service:
+    state: started
+    daemon-reload: yes
+    name: neutronbe 
